<resources>
    <string name="fr_HT" translatable="false">Kreyòl ayisyen</string>
    <string name="pt_BR" translatable="false">Português do Brasil</string>
    <string name="zh_CN" translatable="false">简体中文</string>
    <string name="zh_TW" translatable="false">繁體中文</string>
    <string name="app_name" translatable="false">Meshtastic</string>
    <string name="some_username" translatable="false">SKH</string>
    <string name="sample_message" translatable="false">hey I found the cache, it is over here next to the big tiger. I\'m kinda scared.</string>
    <string name="default_mqtt_address" translatable="false">mqtt.meshtastic.org</string>
    <string name="fallback_node_name">Meshtastic %s</string>
    <string name="node_filter_placeholder">Filter</string>
    <string name="desc_node_filter_clear">clear node filter</string>
    <string name="node_filter_include_unknown">Include unknown</string>
    <string name="node_filter_only_online">Hide offline nodes</string>
    <string name="node_filter_only_direct">Only show direct nodes</string>
    <string name="node_filter_ignored">You are viewing ignored nodes,\nPress to return to the node list.</string>
    <string name="node_filter_show_details">Show details</string>
    <string name="node_sort_button">Node sorting options</string>
    <string name="node_sort_alpha">A-Z</string>
    <string name="node_sort_channel">Channel</string>
    <string name="node_sort_distance">Distance</string>
    <string name="node_sort_hops_away">Hops away</string>
    <string name="node_sort_last_heard">Last heard</string>
    <string name="node_sort_via_mqtt">via MQTT</string>
    <string name="via_mqtt">via MQTT</string>
    <string name="node_sort_via_favorite">via Favorite</string>
    <string name="node_filter_show_ignored">Ignored Nodes</string>
    <string name="unrecognized">Unrecognized</string>
    <string name="message_status_enroute">Waiting to be acknowledged</string>
    <string name="message_status_queued">Queued for sending</string>
    <string name="routing_error_none">Acknowledged</string>
    <string name="routing_error_no_route">No route</string>
    <string name="routing_error_got_nak">Received a negative acknowledgment</string>
    <string name="routing_error_timeout">Timeout</string>
    <string name="routing_error_no_interface">No Interface</string>
    <string name="routing_error_max_retransmit">Max Retransmission Reached</string>
    <string name="routing_error_no_channel">No Channel</string>
    <string name="routing_error_too_large">Packet too large</string>
    <string name="routing_error_no_response">No response</string>
    <string name="routing_error_bad_request">Bad Request</string>
    <string name="routing_error_duty_cycle_limit">Regional Duty Cycle Limit Reached</string>
    <string name="routing_error_not_authorized">Not Authorized</string>
    <string name="routing_error_pki_failed">Encrypted Send Failed</string>
    <string name="routing_error_pki_unknown_pubkey">Unknown Public Key</string>
    <string name="routing_error_admin_bad_session_key">Bad session key</string>
    <string name="routing_error_admin_public_key_unauthorized">Public Key unauthorized</string>
    <string name="role_client">Client</string>
    <string name="role_client_desc">App connected or standalone messaging device.</string>
    <string name="role_client_mute">Client Mute</string>
    <string name="role_client_mute_desc">Device that does not forward packets from other devices.</string>
    <string name="role_router">Router</string>
    <string name="role_router_desc">Infrastructure node for extending network coverage by relaying messages. Visible in nodes list.</string>
    <string name="role_router_client">Router Client</string>
    <string name="role_router_client_desc">Combination of both ROUTER and CLIENT. Not for mobile devices.</string>
    <string name="role_repeater">Repeater</string>
    <string name="role_repeater_desc">Infrastructure node for extending network coverage by relaying messages with minimal overhead. Not visible in nodes list.</string>
    <string name="role_tracker">Tracker</string>
    <string name="role_tracker_desc">Broadcasts GPS position packets as priority.</string>
    <string name="role_sensor">Sensor</string>
    <string name="role_sensor_desc">Broadcasts telemetry packets as priority.</string>
    <string name="role_tak">TAK</string>
    <string name="role_tak_desc">Optimized for ATAK system communication, reduces routine broadcasts.</string>
    <string name="role_client_hidden">Client Hidden</string>
    <string name="role_client_hidden_desc">Device that only broadcasts as needed for stealth or power savings.</string>
    <string name="role_lost_and_found">Lost and Found</string>
    <string name="role_lost_and_found_desc">Broadcasts location as message to default channel regularly for to assist with device recovery.</string>
    <string name="role_tak_tracker">TAK Tracker</string>
    <string name="role_tak_tracker_desc">Enables automatic TAK PLI broadcasts and reduces routine broadcasts.</string>
    <string name="role_router_late">Router Late</string>
    <string name="role_router_late_desc">Infrastructure node that always rebroadcasts packets once but only after all other modes, ensuring additional coverage for local clusters. Visible in nodes list.</string>
    <string name="rebroadcast_mode_all">All</string>
    <string name="rebroadcast_mode_all_desc">Rebroadcast any observed message, if it was on our private channel or from another mesh with the same lora parameters.</string>
    <string name="rebroadcast_mode_all_skip_decoding">All Skip Decoding</string>
    <string name="rebroadcast_mode_all_skip_decoding_desc">Same as behavior as ALL but skips packet decoding and simply rebroadcasts them. Only available in Repeater role. Setting this on any other roles will result in ALL behavior.</string>
    <string name="rebroadcast_mode_local_only">Local Only</string>
    <string name="rebroadcast_mode_local_only_desc">Ignores observed messages from foreign meshes that are open or those which it cannot decrypt. Only rebroadcasts message on the nodes local primary / secondary channels.</string>
    <string name="rebroadcast_mode_known_only">Known Only</string>
    <string name="rebroadcast_mode_known_only_desc">Ignores observed messages from foreign meshes like LOCAL ONLY, but takes it step further by also ignoring messages from nodes not already in the node\'s known list.</string>
    <string name="rebroadcast_mode_none">None</string>
    <string name="rebroadcast_mode_none_desc">Only permitted for SENSOR, TRACKER and TAK_TRACKER roles, this will inhibit all rebroadcasts, not unlike CLIENT_MUTE role.</string>
    <string name="rebroadcast_mode_core_portnums_only">Core Portnums Only</string>
    <string name="rebroadcast_mode_core_portnums_only_desc">Ignores packets from non-standard portnums such as: TAK, RangeTest, PaxCounter, etc. Only rebroadcasts packets with standard portnums: NodeInfo, Text, Position, Telemetry, and Routing.</string>
    <string name="config_device_doubleTapAsButtonPress_summary">Treat double tap on supported accelerometers as a user button press.</string>
    <string name="config_device_tripleClickAsAdHocPing_summary">Send a position on the primary channel when the user button is triple clicked.</string>
    <string name="config_device_ledHeartbeatEnabled_summary">Controls the blinking LED on the device. For most devices this will control one of the up to 4 LEDs, the charger and GPS LEDs are not controllable.</string>
    <string name="config_device_tzdef_summary">Time zone for dates on the device screen and log.</string>
    <string name="config_device_transmitOverLora_summary">Whether in addition to sending it to MQTT and the PhoneAPI, our NeighborInfo should be transmitted over LoRa. Not available on a channel with default key and name.</string>
    <string name="config_display_screen_on_secs_summary">How long the screen remains on after the user button is pressed or messages are received.</string>
    <string name="config_display_auto_screen_carousel_secs_summary">Automatically toggles to the next page on the screen like a carousel, based the specified interval.</string>
    <string name="config_display_compass_north_top_summary">The compass heading on the screen outside of the circle will always point north.</string>
    <string name="config_display_flip_screen_summary">Flip screen vertically.</string>
    <string name="config_display_units_summary">Units displayed on the device screen.</string>
    <string name="config_display_oled_summary">Override automatic OLED screen detection.</string>
    <string name="config_display_displaymode_summary">Override default screen layout.</string>
    <string name="config_display_heading_bold_summary">Bold the heading text on the screen.</string>
    <string name="config_display_wake_on_tap_or_motion_summary">Requires that there be an accelerometer on your device.</string>
    <string name="config_lora_region_summary">The region where you will be using your radios.</string>
    <string name="config_lora_modem_preset_summary">Available modem presets, default is Long Fast.</string>
    <string name="config_lora_hop_limit_summary">Sets the maximum number of hops, default is 3. Increasing hops also increases congestion and should be used carefully. 0 hop broadcast messages will not get ACKs.</string>
    <string name="config_lora_frequency_slot_summary">Your node’s operating frequency is calculated based on the region, modem preset, and this field. When 0, the slot is automatically calculated based on the primary channel name.</string>
    <string name="config_network_wifi_enabled_summary">Enabling WiFi will disable the bluetooth connection to the app.</string>
    <string name="config_network_eth_enabled_summary">Enabling Ethernet will disable the bluetooth connection to the app. TCP node connections are not available on Apple devices.</string>
    <string name="config_network_udp_enabled_summary">Enable broadcasting packets via UDP over the local network.</string>
    <string name="config_position_broadcast_secs_summary">The maximum interval that can elapse without a node broadcasting a position.</string>
    <string name="config_position_broadcast_smart_minimum_interval_secs_summary">The fastest that position updates will be sent if the minimum distance has been satisfied.</string>
    <string name="config_position_broadcast_smart_minimum_distance_summary">The minimum distance change in meters to be considered for a smart position broadcast.</string>
    <string name="config_position_gps_update_interval_summary">How often should we try to get a GPS position.</string>
    <string name="config_position_flags_summary">Optional fields to include when assembling position messages. the more fields are included, the larger the message will be - leading to longer airtime and a higher risk of packet loss.</string>
    <string name="config_power_is_power_saving_summary">Will sleep everything as much as possible, for the tracker and sensor role this will also include the lora radio. Don\'t use this setting if you want to use your device with the phone apps or are using a device without a user button.</string>
    <string name="config_security_public_key">Generated from your public key and sent out to other nodes on the mesh to allow them to compute a shared secret key.</string>
    <string name="config_security_private_key">Used to create a shared key with a remote device.</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="locked">Locked</string>
    <string name="shutdown">Shutdown</string>
    <string name="reboot">Reboot</string>
    <string name="factory_reset">Factory reset</string>
    <string name="direct_message">Direct Message</string>
    <string name="nodedb_reset">NodeDB reset</string>
</resources>