<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/direct_message"
        android:title="@string/direct_message"
        app:showAsAction="withText" />
    <group android:id="@+id/group_admin">
        <item
            android:id="@+id/reboot"
            android:title="@string/reboot"
            app:showAsAction="withText" />
        <item
            android:id="@+id/shutdown"
            android:title="@string/shutdown"
            app:showAsAction="withText" />
        <item
            android:id="@+id/factory_reset"
            android:title="@string/factory_reset"
            app:showAsAction="withText" />
        <item
            android:id="@+id/nodedb_reset"
            android:title="@string/nodedb_reset"
            app:showAsAction="withText" />
    </group>
</menu>